--- a/index.html
+++ b/index.html
@@ -154,11 +154,12 @@ ul.paper {
 <body>
     <div class="grid-2">
         <div class="section-1">
-            <img src="C:\Users\tkame\OneDrive\Desktop\ktlogo.png" width="110" height="73"/>
+            <img src="ktlogo.png" width="110" height="73"/>
             <h2>Kameron Thompson</h2>
             <p>Prince George's County, MD</p>
             <a href="https://twitter.com/yooKam__"><i class="fab fa-twitter"></i></a>
             <a href="https://www.linkedin.com/in/kameron-thompson/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Kam3ron101"><i class="fab fa-github"></i></a>
             <a href="mailto:tkameron53@yahoo.com"><i class="fas fa-envelope"></i></a>  
 
         </div>
