--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body{
     padding: 0;
     font-family: 'Roboto', sans-serif;
     background-color: #216088;
-    color: #7A7C80;
+    color: #e9e9f0;
 
 }
 
