--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ ul.paper {
             
             <h2>Personal Info</h2>
             <ul class="paper">
-                <li><u><a href="Kameron Thompson Resume 4.5.2023 (1).pdf">Resume</a></u></li>
+                <li><u><a href="sodapdf-converted (2).pdf">Resume</a></u></li>
             </ul>
         </div>
     </div>
