--- a/index.html
+++ b/index.html
@@ -184,8 +184,9 @@ ul.paper {
 
             <h2>Personal Projects</h2>
             <ul class="phone">
-               <li>Rental vehicle app</li>
+               <li>Constructed an Rental vehicle app allowing users to rent specific vehicles</li>
                 <li>Personal Website</a></u>
+                <li>Sports ebsite that allows users to follow their favorite sports teams</a></u>
             </ul>
             
             <h2>Personal Info</h2>
