--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@ ul.paper {
 
             <h2>Personal Projects</h2>
             <ul class="phone">
-               <li>Constructed an Rental vehicle app allowing users to rent specific vehicles</li>
-                <li>Personal Website</a></u>
-                <li>Sports ebsite that allows users to follow their favorite sports teams</a></u>
-            </ul>
+               <li>Personal Website</a></u>
+               <li>Constructed a rental vehicle app allowing users to rent specific vehicles</li>
+               <li>Built a sports website that allows users to follow their favorite sports teams</a></u>
+             </ul>
             
             <h2>Personal Info</h2>
             <ul class="paper">
