--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@ ul.paper {
         </div>
         <div class="section-2">
             <h2>About Me</h2>
-            <p>I am currently a senior at Towosn Univeristy graduting this spring 2023. My major is computer information systems with a track in systems.
-             I am currently knowledgeable in Java, python, html, CSS, Java Script, my SQL and R stduio all from my classes here at Towson. While obtaining knowledge in these skills I am also currently an intern and the 
+            <p>I am a graduate from Towosn Univeristy with a degree in computer information systems.
+             I currently posses skills in Java, python, html, CSS, Java Script, Node.js, React ,my SQL and R stduio all from my classes at Towson. While obtaining knowledge in these skills I am also currently an porject intern assitant at the 
              Networking and Information Technolgy Resaerch and Development Program (NITRD) in Washington, DC.
             </p>
             
@@ -187,6 +187,7 @@ ul.paper {
                <li>Personal Website</a></u>
                <li>Constructed a rental vehicle app allowing users to rent specific vehicles</li>
                <li>Built a sports website that allows users to follow their favorite sports teams</a></u>
+               <li>Created an inventory management wepbapp cabale of holding over 1000 entries</a></u>
              </ul>
             
             <h2>Personal Info</h2>
