--- a/index.html
+++ b/index.html
@@ -170,16 +170,18 @@ ul.paper {
              Networking and Information Technolgy Resaerch and Development Program (NITRD) in Washington, DC.
             </p>
             
-            <h4>Towson University courses I have completed</h4>
+            <h4> Relevant Towson University courses I have completed</h4>
             <ul class="book">
-                <li>COSC 236 & 237: Intro to Computer Science 1 & 2 </li>
-                <li>CIS 328: Intro to Data analytics</li>
-                <li>CIS 377: Intro to Cyber Securtiy</li>
-                <li>COSC 336: Data Structures and Algorithm anaylsis</li>
-                <li>COSC 412: Software engineering </li>
-                <li>CIS 435: Human Computer Interaction</li>
-                <li>CIS 458: Organizational Database Management</li>
-                <li>COSC 484: Web Programming</li>
+                <li>Computer Science 1 & 2</li>
+                <li>Data analytics</li>
+                <li>Cyber Securtiy</li>
+                <li>Data Structures and Algorithm anaylsis</li>
+                <li>Software engineering</li>
+                <li>Human Computer Interaction</li>
+                <li>Organizational Database Management</li>
+                <li>Project Managment</li>
+                <li>System Development/Ecommerce</li>
+                <li>Web Based Programming</li>
             </ul>
 
             <h2>Personal Projects</h2>
@@ -192,7 +194,7 @@ ul.paper {
             
             <h2>Personal Info</h2>
             <ul class="paper">
-                <li><u><a href="sodapdf-converted (2).pdf">Resume</a></u></li>
+                <li><u><a href="Kameron_Thompson_2023Resume.pdf">Resume</a></u></li>
             </ul>
         </div>
     </div>
