--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ ul.paper {
 <body>
     <div class="grid-2">
         <div class="section-1">
-            <img src="ktlogo.png" width="110" height="73"/>
+            <img src="personalimage.JPG" width="110" height="73"/>
             <h2>Kameron Thompson</h2>
             <p>Prince George's County, MD</p>
             <a href="https://twitter.com/yooKam__"><i class="fab fa-twitter"></i></a>
