--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 }
 
 img {
-    width: 5em;
+    width: 15em;
     height: auto;
 }
 
@@ -165,9 +165,11 @@ ul.paper {
         </div>
         <div class="section-2">
             <h2>About Me</h2>
-            <p>I am a graduate from Towosn Univeristy with a degree in computer information systems.
-             I currently posses skills in Java, python, html, CSS, Java Script, Node.js, React ,my SQL and R stduio all from my classes at Towson. While obtaining knowledge in these skills I am also currently an porject intern assitant at the 
-             Networking and Information Technolgy Resaerch and Development Program (NITRD) in Washington, DC.
+            <p>I am a graduate from Towosn Univeristy with a degree in Computer Information Systems.
+                Throughout my time at Towson, I have delved deep into the world of web development, mastering the intricacies of HTML, CSS, JavaScript, and even exploring the wonders of Vue.js. I have crafted captivating user interfaces, static pages, and unlocked the full potential of interactive web experiences. I have also ventured into the depths of data management and analysis, harnessing the power of MySQL, SQL, and MongoDB to navigate complex datasets with ease. Moreover, I have honed my skills in the robust programming languages of C++, Java, and Python.
+                I have also dabbled in the world of server-side technologies from Node.js to building dynamic web applications with React and even exploring the realms of JSP and PHP.
+                But my passion for technology doesn't stop there. I have also ventured into the world of Linux, mastering its command-line interface and unleashing the power of Bash scripting. With each line of code, I have built a strong foundation in system administration and automation.
+                While obtaining knowledge in these skills I have also been a porject intern assitant at the Networking and Information Technolgy Resaerch and Development Program (NITRD) in Washington, DC.
             </p>
             
             <h4> Relevant Towson University courses I have completed</h4>
