--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ ul.paper {
             
             <h2>Personal Info</h2>
             <ul class="paper">
-                <li><u><a href="Kameron_Thompson_2023Resume.pdf">Resume</a></u></li>
+                <li><u><a href="Kameron Thompson 2023Resume.pdf">Resume</a></u></li>
             </ul>
         </div>
     </div>
